Update of KafkaConsumer

--- a/04_00_CHECK_jdbcConnection.ipynb
+++ b/04_00_CHECK_jdbcConnection.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-09-20T07:59:36.262398Z",
-     "end_time": "2023-09-20T07:59:36.894912Z"
+     "start_time": "2023-09-25T09:49:50.232349Z",
+     "end_time": "2023-09-25T09:49:50.337342Z"
     }
    },
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import ConnectionConfig as cc\n",
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T07:59:40.696476Z",
-     "end_time": "2023-09-20T07:59:40.839654Z"
+     "start_time": "2023-09-25T09:49:51.228347Z",
+     "end_time": "2023-09-25T09:49:51.401061Z"
     }
    }
   },
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x27c1f4d08e0>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x258c00dda60>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4043\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,8 +95,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T07:59:44.137835Z",
-     "end_time": "2023-09-20T08:00:43.533912Z"
+     "start_time": "2023-09-25T09:49:54.721314Z",
+     "end_time": "2023-09-25T09:50:14.944842Z"
     }
    }
   },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -320,6 +320,7 @@
       "|2009-03-02 00:00:00|         Alan Barnes|         2|1438789069|     247|\n",
       "|2011-09-22 00:00:00|    Charlotte Melton|         2|1100444782|     248|\n",
       "|2011-07-21 00:00:00|       Beth Thompson|         2| 697249177|     249|\n",
+      "|2009-07-13 00:00:00|         Bryan Mills|         2|1213138280|     250|\n",
       "|2011-10-01 00:00:00|        Barry French|         1| 683057055|       2|\n",
       "|2011-07-10 00:00:00|       Clay Rozendal|         1|1732115679|       3|\n",
       "|2010-08-28 00:00:00|      Carlos Soltero|         1|1275042249|       4|\n",
@@ -375,10 +376,10 @@
       "|2011-09-29 00:00:00|       Nicole Hansen|         1|1285735736|      54|\n",
       "|2012-05-04 00:00:00|       Nicole Hansen|         1| 711574664|      55|\n",
       "|2011-05-17 00:00:00|          Beth Paige|         1|1949204028|      56|\n",
-      "|2023-10-20 00:00:00|  Muhammed MacIntyre|         1|        10|       1|\n",
+      "|2023-10-20 00:00:00|  Muhammed MacIntyre|         1|       100|       1|\n",
       "|2009-08-24 00:00:00|      Monica Federle|         2|         2|     192|\n",
       "|2010-08-20 00:00:00|         Jack Lebron|         5| 755436703|     499|\n",
-      "|2009-07-13 00:00:00|         Bryan Mills|         2|1213138280|     250|\n",
+      "|2012-05-17 00:00:00|   Giulietta Baptist|         5| 319762930|     500|\n",
       "|2010-03-29 00:00:00|         Alan Barnes|         2|1432000367|     251|\n",
       "|2010-02-06 00:00:00|          Beth Paige|         2| 930259300|     252|\n",
       "|2012-09-12 00:00:00|      Mike Pelletier|         2| 549553592|     253|\n",
@@ -627,7 +628,6 @@
       "|2010-02-01 00:00:00|  Christopher Schild|         4|1952176536|     496|\n",
       "|2011-09-26 00:00:00|       Helen Abelman|         4|1341422284|     497|\n",
       "|2010-08-12 00:00:00|         Jack Lebron|         5|1263946635|     498|\n",
-      "|2012-05-17 00:00:00|   Giulietta Baptist|         5| 319762930|     500|\n",
       "|2010-07-09 00:00:00|            Jim Sink|         5| 511095388|     501|\n",
       "|2011-10-22 00:00:00|     Julie Creighton|         5|  23272915|     502|\n",
       "|2010-07-15 00:00:00|        Sanjit Chand|         5| 709031516|     503|\n",
@@ -1129,6 +1129,7 @@
       "|2011-09-07 00:00:00|      Sally Matthias|         4|2031479825|     999|\n",
       "|2012-10-06 00:00:00|                 Bla|         5|     23213|    1000|\n",
       "+-------------------+--------------------+----------+----------+--------+\n",
+      "only showing top 1000 rows\n",
       "\n"
      ]
     }
@@ -1146,15 +1147,15 @@
     "    .option(\"partitionColumn\", \"Order_ID\") \\\n",
     "    .option(\"numPartitions\", 4) \\\n",
     "    .option(\"lowerBound\", 0) \\\n",
-    "    .option(\"upperBound\", 1000) \\\n",
+    "    .option(\"upperBound\", 1001) \\\n",
     "    .load()\n",
     "sales_df.show(1000)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:00:50.400232Z",
-     "end_time": "2023-09-20T08:01:01.588663Z"
+     "start_time": "2023-09-25T09:50:36.332884Z",
+     "end_time": "2023-09-25T09:50:39.026448Z"
     }
    }
   },
@@ -1168,8 +1169,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:02:05.737269Z",
-     "end_time": "2023-09-20T08:02:06.259945Z"
+     "start_time": "2023-09-25T07:23:01.088997Z",
+     "end_time": "2023-09-25T07:23:01.280020Z"
     }
    }
   },
@@ -1181,8 +1182,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:08:57.891082Z",
-     "end_time": "2023-09-01T09:08:57.905078Z"
+     "start_time": "2023-09-25T07:23:01.269740Z",
+     "end_time": "2023-09-25T07:23:01.290163Z"
     }
    }
   }
