--- a/05_2_DWH_dimSalesRep_Initial.ipynb
+++ b/05_2_DWH_dimSalesRep_Initial.ipynb
@@ -23,28 +23,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T11:09:44.975583Z",
-     "end_time": "2023-09-20T11:09:45.207088Z"
+     "start_time": "2023-09-25T10:08:46.961417Z",
+     "end_time": "2023-09-25T10:08:46.961417Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x00000217ECB9E3D0>\n"
+      "<pyspark.sql.session.SparkSession object at 0x00000188FE41C730>\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x217ecb9e3d0>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesRepInit</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x188fe41c730>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesRepInit</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,8 +57,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T11:36:22.911439Z",
-     "end_time": "2023-09-20T11:36:37.316793Z"
+     "start_time": "2023-09-25T10:08:47.406319Z",
+     "end_time": "2023-09-25T10:08:47.406319Z"
     }
    }
   },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -106,23 +106,25 @@
       "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
       "|          salesRepSK|salesRepID|          name|       office|          scd_start|            scd_end|                 md5|current|\n",
       "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
-      "|e1403167-d6bc-4e1...|         1|       Z. Jane|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|00b409cd29c569266...|   true|\n",
-      "|4b7542d1-f37c-497...|         2|P. Chapmanneke|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|ff8eb928f1004c797...|   true|\n",
-      "|4aebfcb7-48c1-467...|         3|      T. Crane|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|6c062f95defda9dc3...|   true|\n",
-      "|1605101a-71cf-4bd...|         4|     R. Geller|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|6f34bd2f09f010ec1...|   true|\n",
-      "|392eef95-7448-481...|         5|       J.Mosby|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|fa85515824433037a...|   true|\n",
-      "|40945224-e95e-42f...|         6|    B. Simpson|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|0ecb6ba5656492a5f...|   true|\n",
-      "|2fa41c1a-4fb7-457...|         7|    B. Stinson|San Fransisco|1999-01-01 00:00:00|2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
-      "|7b4e26d0-0ef4-479...|         8| L. Hofstadter|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
-      "|10c3e797-2cfb-490...|         9|     S. Cooper|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
-      "|2f86a6f3-a4d6-448...|        10|  F. Underwood|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
-      "|0e0d96aa-c680-474...|        11|      W. White|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
-      "|1b0305db-f628-48a...|        12|  T. Lannister|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
-      "|11945efe-27c2-46c...|        13|     M. Rosske|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|c99e12e650c2aebc8...|   true|\n",
-      "|47735880-7086-418...|     10015|         Frits|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|a9986535dd7259e4c...|   true|\n",
-      "|f73e89e8-e0fb-4a4...|     10016|          Baby|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|3791c67a76ab1b258...|   true|\n",
-      "|306f29e6-65dd-47d...|     10017|      Boomerke|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|03900773d45edec5e...|   true|\n",
-      "|e6285f3a-e1bc-464...|     10018|        Boomer|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|41f9e91bd29384e7a...|   true|\n",
+      "|92e6fd0a-ad38-46f...|         1|       Z. Jane|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|cca169d46f455b5fe...|   true|\n",
+      "|35cc902c-849a-48f...|         2|P. Chapmanneke|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|ff8eb928f1004c797...|   true|\n",
+      "|776066b8-5cb4-4ae...|         3|      T. Crane|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|6c062f95defda9dc3...|   true|\n",
+      "|008c920b-ad5b-422...|         4|     R. Geller|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|6f34bd2f09f010ec1...|   true|\n",
+      "|44f6580b-519a-47c...|         5|       J.Mosby|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|fa85515824433037a...|   true|\n",
+      "|ba7f5076-4f1f-4c7...|         6|    B. Simpson|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|0ecb6ba5656492a5f...|   true|\n",
+      "|b535d847-a9ec-4b0...|         7|    B. Stinson|San Fransisco|1999-01-01 00:00:00|2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
+      "|a7976933-ce51-42b...|         8| L. Hofstadter|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
+      "|868a71b7-7319-4a8...|         9|     S. Cooper|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
+      "|c551093b-b69c-4fb...|        10|  F. Underwood|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
+      "|84e851e6-ea0a-450...|        11|      W. White|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
+      "|aaea7613-6233-463...|        12|  T. Lannister|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
+      "|de5fc6e3-c9f5-4a7...|        13|     M. Rosske|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|c99e12e650c2aebc8...|   true|\n",
+      "|771b17bd-7750-4ab...|     10015|         Frits|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|a9986535dd7259e4c...|   true|\n",
+      "|afd66520-9c7d-493...|     10016|          Baby|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|3791c67a76ab1b258...|   true|\n",
+      "|d9ab9c5b-fe22-4e0...|     10017|      Boomerke|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|03900773d45edec5e...|   true|\n",
+      "|fcd8041b-cb23-402...|     10018|        Boomer|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|41f9e91bd29384e7a...|   true|\n",
+      "|d6d4c6a6-493d-4b4...|     10019|         Frits|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|18e0feb4944ac7a30...|   true|\n",
+      "|bfbf44d5-cd28-4f8...|     10020|       Mohamed|       Madrid|1999-01-01 00:00:00|2100-12-12 00:00:00|61f10525857596fe6...|   true|\n",
       "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
       "\n"
      ]
@@ -164,8 +166,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T11:36:53.138962Z",
-     "end_time": "2023-09-20T11:37:02.616167Z"
+     "start_time": "2023-09-25T10:09:04.226086Z",
+     "end_time": "2023-09-25T10:09:04.226086Z"
     }
    }
   },
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "spark.stop()"
@@ -198,8 +200,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T11:09:56.162399Z",
-     "end_time": "2023-09-20T11:09:57.156653Z"
+     "start_time": "2023-09-25T10:09:36.524023Z",
+     "end_time": "2023-09-25T10:09:36.524023Z"
     }
    }
   },
@@ -211,8 +213,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T11:09:57.156653Z",
-     "end_time": "2023-09-20T11:09:57.172278Z"
+     "start_time": "2023-09-25T10:09:05.291152Z",
+     "end_time": "2023-09-25T10:09:05.291152Z"
     }
    }
   }
